[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/ShipBody.gd" type="Script" id=1]
[ext_resource path="res://Rocket Fire/fire06.png" type="Texture" id=2]
[ext_resource path="res://Simple explosion/simpleExplosion01.png" type="Texture" id=3]
[ext_resource path="res://Simple explosion/simpleExplosion07.png" type="Texture" id=4]
[ext_resource path="res://Misc Graphics/playerShip1_red.png" type="Texture" id=5]
[ext_resource path="res://Simple explosion/simpleExplosion03.png" type="Texture" id=6]
[ext_resource path="res://Simple explosion/simpleExplosion08.png" type="Texture" id=7]
[ext_resource path="res://Simple explosion/simpleExplosion00.png" type="Texture" id=8]
[ext_resource path="res://Simple explosion/simpleExplosion02.png" type="Texture" id=9]
[ext_resource path="res://Simple explosion/simpleExplosion06.png" type="Texture" id=10]
[ext_resource path="res://Simple explosion/simpleExplosion05.png" type="Texture" id=11]
[ext_resource path="res://Simple explosion/simpleExplosion04.png" type="Texture" id=12]
[ext_resource path="res://Rocket Fire/fire07.png" type="Texture" id=13]
[ext_resource path="res://Sounds/laser5.ogg" type="AudioStream" id=14]
[ext_resource path="res://Sounds/rumble3.ogg" type="AudioStream" id=15]


[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 13 ) ],
"loop": true,
"name": "rocket",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 7 ) ],
"loop": false,
"name": "boom",
"speed": 5.0
} ]

[node name="PlayerBody" type="RigidBody2D"]
position = Vector2( 26, 35 )
z_index = 5
collision_layer = 5
collision_mask = 5
mass = 2.04082
gravity_scale = 2.0
contacts_reported = 4
contact_monitor = true
script = ExtResource( 1 )

[node name="PlayerCollisionShape" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 61.0511, 28.6149, 74.762, -10.5592, 105.013, -13.8237, 111.542, 22.5211, 136.788, 26.4385, 136.835, 46.1929, 110.019, 48.8548, 105.231, 85.1996, 74.5444, 83.2409, 61.2687, 43.1963 )

[node name="PlayerOverlaySprite" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 99, 36 )
rotation = 1.5708
z_index = 6
texture = ExtResource( 5 )

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 99, 36 )
rotation = 1.5708
texture = ExtResource( 5 )

[node name="PlayerRocket" type="AnimatedSprite" parent="PlayerSprite"]
visible = false
position = Vector2( -0.790695, 47.8104 )
rotation = 3.14159
frames = SubResource( 1 )
animation = "rocket"
playing = true

[node name="ExplosionSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 101.424, 38.1302 )
frames = SubResource( 2 )
animation = "boom"
speed_scale = 3.0

[node name="BlinkingTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1

[node name="DisabledTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="RocketTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="LaserSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="ExplodeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
[connection signal="animation_finished" from="ExplosionSprite" to="." method="_on_ExplosionSprite_animation_finished"]
[connection signal="timeout" from="BlinkingTimer" to="." method="_on_BlinkingTimer_timeout"]
[connection signal="timeout" from="DisabledTimer" to="." method="_on_DisabledTimer_timeout"]
[connection signal="timeout" from="RocketTimer" to="." method="_on_RocketTimer_timeout"]
